--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -14,7 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm 
+      run: |
+        npm ci
+        npm run build --if-present
+    - name: Test
+      run: |
+        npm test
   
