[PW-37] Update index.html metadata. Fix manifest.json typo

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Callum Wright",
-  "name": "Callum Wright Personal Wesbite",
+  "name": "Callum Wright Personal Website",
   "icons": [
     {
       "src": "favicon.ico",
