--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.38.0",
+    "stylelint": "^13.13.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
