--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "4.0.3",
     "sass": "^1.38.0",
     "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
