[PW-29] Set lint.yml auto_fix true

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,4 +26,5 @@ jobs:
       - name: Run linters
         uses: wearerequired/lint-action@v1
         with:
+          auto_fix: true
           stylelint: true
