--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,3 +28,6 @@ jobs:
         with:
           auto_fix: true
           stylelint: true
+          git_name: "Personal Website Lint Action"
+          git_email: "wrightci01s@gmail.com"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
