--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,6 +27,7 @@ jobs:
         uses: wearerequired/lint-action@v1
         with:
           auto_fix: true
+          eslint: true
           stylelint: true
           git_name: "Personal Website Lint Action"
           git_email: "wrightci01s@gmail.com"
