--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           auto_fix: true
           eslint: true
+          eslint_dir: src/
           stylelint: true
           git_name: "Personal Website Lint Action"
           git_email: "wrightci01s@gmail.com"
