--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,6 +10,7 @@ jobs:
   run-linters:
     name: run linters
     runs-on: ubuntu-latest
+    if: github.actor!= 'dependabot[bot]'
 
     steps:
       - name: Check out Git repository
