[PW-68] Update last-update.yml. Add ref. Expand git commit -am

--- a/.github/workflows/last-updated.yml
+++ b/.github/workflows/last-updated.yml
@@ -15,12 +15,14 @@ jobs:
     - uses: actions/checkout@v2
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
+        ref: ${{ github.event.pull_request.head.ref }}
     - name: run Python script
       run: python ./.github/workflows/last-updated.py
     - name: Commit changes
       run: |
         git config --global user.name 'Callum Wright'
         git config --global user.email 'wrightci01s@gmail.com'
-        git commit -am "Auto updating last-updated.js"
+        git add .
+        git commit -m "Auto updating last-updated.js"
         git push
   
