--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -6,8 +6,8 @@ name: Deploy to Firebase Hosting on PR
 jobs:
   build_and_preview:
     if: !And 
-      - '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
-      - '${{ github.actor!= "dependabot[bot]" }}'
+      - ${{ github.event.pull_request.head.repo.full_name == github.repository }}
+      - ${{ github.actor!= 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
