--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,8 @@
         "react"
     ],
     "rules": {
-        "max-len": ["error", { "code": 120 }],
-        "linebreak-style": 0
+        "indent": ["error", 4],
+        "linebreak-style": 0,
+        "max-len": ["error", { "code": 120 }]
     }
 }
